implement delete, update, paginate categories
